k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: ${SERVICE-NAME}-service
  namespace: ${NAMESPACE}

spec:
  selector:
    app: ${SERVICE-NAME}

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
