k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ${SERVICE-NAME}-ingress
  namespace: ${NAMESPACE}

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - hosts:
        - ${SERVICE-NAME}.${NAMESPACE}.com
      secretName: ${SERVICE-NAME}-tls

  rules:
    - host: ${SERVICE-NAME}.${NAMESPACE}.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ${SERVICE-NAME}-service
                port:
                  number: 3000
